# NativeCompiler

./: CMakeLists.txt  README.md
include/: ClangAPI.h
include/CodeGen/: x86Code.h
include/MachineCode/: AOT.h  ByteCode.h  DSL.in  JIT.h  Native.h  cmd.in  dslforcmd.in  x86Code.h  x86cmd.in
include/Module/: AST.h  Module.h
include/Symbol/: Symbol.h
include/Utils/: ErrorMessage.h  FreeAll.h
source/: runner.cpp  syntax.std
src/: main.cpp
src/CodeGen/: Cmd.def  ELFGen.cpp  StdLibrary.def  x86CodeEmitter.cpp  x86CodeUtils.cpp.in
src/MachineCode/: AOT.cpp  ByteCode.cpp  CodeGen.cpp.in  Compilerx86Code.cpp  JIT.cpp  Native.cpp  x86Code.cpp
src/Module/: AST.cpp  ByteCode.cpp  Module.cpp
src/Symbol/: Symbol.cpp
